# Console-Chess

./: .gitignore  README.MD
.svn/: wc.db
20.01.2020/: CMakeLists.txt
20.01.2020/program/headers/: Position.h
20.01.2020/program/headers/Pieces/: Bishop.h  King.h
20.01.2020/program/src/: Board.cpp  Game.cpp  Position.cpp
20.01.2020/program/src/Pieces/: Pawn.cpp  Piece.cpp  Queen.cpp
20.01.2020/program/src/Player/: Player.cpp
20.01.2020/program/test/: GameTest.cpp  master.cpp
branches/: CMakeLists.txt
branches/program/headers/: Board.h  Field.h  Game.h  Position.h
branches/program/headers/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
branches/program/headers/Player/: AI.h  Human.h  Move.h  Player.h  Previous_Move.h
branches/program/src/: Board.cpp  Game.cpp  Position.cpp  main.cpp
branches/program/src/Pieces/: Bishop.cpp  King.cpp  Pawn.cpp  Piece.cpp  Queen.cpp
branches/program/src/Player/: AI.cpp  Human.cpp  Move.cpp  Player.cpp  Previous_Move.cpp
branches/program/test/: BoardTest.cpp  FieldTest.cpp  MoveTest.cpp  PiecesTest.cpp  PlayerTest.cpp
tags/20.01.2020/program/headers/Pieces/: Rook.h
tags/20.01.2020/program/headers/Player/: AI.h  Move.h  Player.h
tags/20.01.2020/program/src/: Field.cpp  main.cpp
tags/20.01.2020/program/src/Pieces/: King.cpp  Rook.cpp
tags/20.01.2020/program/test/: BoardTest.cpp  FieldTest.cpp  PlayerTest.cpp
trunk/: CMakeLists.txt  pobi_project.rarr
trunk/program/headers/: Board.h  Field.h  Position.h
trunk/program/headers/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
trunk/program/src/: Field.cpp  Game.cpp
trunk/program/src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
trunk/program/src/Player/: Human.cpp  Move.cpp  Previous_Move.cpp
trunk/program/test/: BoardTest.cpp  FieldTest.cpp  PiecesTest.cpp  PlayerTest.cpp
